# gigadream-portal37

./: README.md  local setup
gigadream_portal37/: LICENSE  README.md  pyproject.toml
gigadream_portal37/examples/: quickstart.sh
gigadream_portal37/gigadream/: __init__.py  art.py  cli.py  sound.py
gigadream_portal37/gigadream/config/: default.json
