[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gigadream-portal37"
version = "0.1.0"
description = "GIGADREAM // PORTAL 37 — Terminal ASCII experience. Beachpunk hints. Pure Gigadream transmission."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Tony Jose Matos", email = "tony@tonyjmatos.com"}
]
keywords = ["ascii-art", "terminal", "gigadream", "beachpunk", "glitch", "cyberpunk", "generative-art", "portal37"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
sound = ["simpleaudio>=1.0.4", "numpy>=1.20.0"]

[project.scripts]
gigadream = "gigadream.cli:main"
portal37 = "gigadream.cli:main"

[project.urls]
Homepage = "https://github.com/TonyJMatos/gigadream-portal37"
Repository = "https://github.com/TonyJMatos/gigadream-portal37"
Issues = "https://github.com/TonyJMatos/gigadream-portal37/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
gigadream = ["config/*.json", "assets/*"]